--- a/src/pages/tripDetails/style.scss
+++ b/src/pages/tripDetails/style.scss
@@ -1,7 +1,7 @@
 .trip-details {
-  background-image: url("../../assets/images/tripsDetailsPage/body/body-bg.png");
+  padding: -15px;
   background-size: cover;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   .trip-fetched-details {
     color: white;
 
@@ -24,7 +24,15 @@
       color: $color-orange;
       font-size: 30px;
       font-weight: 600;
-      filter: invert(100);
     }
+  }
+  .dark-gradient {
+    // mix-blend-mode: ;
+    background: linear-gradient(
+      180deg,
+      rgba(18, 18, 18, 0) 0%,
+      rgba(18, 18, 18, 0.78) 51.04%,
+      #121212 100%
+    );
   }
 }
